# docs/swagger.json
@@ -76,7 +76,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.Album"
+                            "$ref": "#/definitions/models.CreateAlbumDto"
                         }
                     }
                 ],
@@ -208,6 +208,30 @@
                 },
                 "price": {
                     "type": "number"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateAlbumDto": {
+            "type": "object",
+            "required": [
+                "artist",
+                "content",
+                "price",
+                "title"
+            ],
+            "properties": {
+                "artist": {
+                    "type": "string"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number",
+                    "minimum": 0
                 },
                 "title": {
                     "type": "string"
